# tanyakah

./: .gitignore  Cargo.toml  DOCKERFILE  Dockerfile  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  bun.lockb  package.json  tailwind.config.js
assets/: style.css  style.min.css
components/: board.hbs  board_other.hbs  layout.hbs  main_layout.hbs  message.hbs  message_container.hbs  message_list.hbs  message_page.hbs  message_reply.hbs  message_view.hbs  register.hbs  reply.hbs  send_message.hbs  share.hbs
small_uid/: Cargo.toml
small_uid/src/: error.rs  lib.rs
src/: auth.rs  config.rs  data.rs  database.rs  main.rs  middleware.rs  render.rs
src/data/: mod.rs
src/db/: boards.rs  messages.rs  mod.rs  replies.rs
src/render/: mod.rs  sections.rs
src/routes/: htmx.rs  mod.rs
