[package]
name = "tanyakah"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
salvo = { version = "0.73.0", features = ["serve-static"] }
redb = "2.1.3"
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["serde_derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
handlebars = "6.1.0"
serde_json = "1.0.128"
eyre = "0.6.12"
serde_urlencoded = "0.7.1"
log = "0.4.22"
base64-url = "3.0.0"
rand = "0.8.5"
chrono = "0.4.38"
small_uid = "0.2.0"
toml = "0.8.19"
directories = "5.0.1"
jsonwebtoken = "9.3.0"
url = "2.5.2"
